grammar.js
// Acore syntax adapter. The vendored Pkl syntax/scanner retains its Apache-2.0
// license. Domain nodes are syntax only; acore-lsp owns semantic validation.
const pkl = require('./vendor/pkl/grammar');
const commaSep = rule => optional(seq(rule, repeat(seq(',', rule)), optional(',')));

module.exports = grammar(pkl, {
  name: 'acore',
  conflicts: ($, original) => original.filter(conflict =>
    !conflict.some(rule => rule.name === 'unqualifiedAccessExpr')).concat([
    [$.objectProperty, $.qualifiedIdentifier, $._callName],
    [$.qualifiedIdentifier, $._callName],
    [$.domainBinding, $._callName],
    [$.domainBlock, $._callName],
    [$.typedIdentifier, $._callName],
    [$.objectProperty],
    [$.objectEntry, $.listExpr],
    [$.objectEntry],
    [$.memberPredicate],
    [$.constructorExpr, $.genericExpr],
  ]),
  rules: {
    module: $ => seq(optional($.shebangComment), optional($.moduleHeader),
      repeat(choice($.importClause, $.importGlobClause, $.profileDeclaration,
        $.extendDeclaration, $._moduleMember, $.domainDeclaration,
        $.domainFunction, $.domainBinding, $.domainBlock, $.domainCall,
        $.useContractDeclaration, $.useExtensionDeclaration, $.stylesDeclaration))),
    profileDeclaration: $ => seq('profile', $.identifier, optional($.intLiteralExpr)),
    extendDeclaration: $ => seq('extend', choice($.qualifiedIdentifier, $.stringConstant), optional($.objectBody)),
    domainDeclaration: $ => prec.right(seq(optional('override'),
      choice('model', 'endpoint', 'entity', 'projection', 'relationship', 'invariant',
        'variant', 'policy', 'enum', 'app', 'page', 'screen', 'component', 'theme',
        'token', 'stylesheet', 'database', 'schema', 'table', 'unique', 'foreignKey',
        'index', 'check', 'service', 'permission', 'guard', 'operation', 'serverPolicy',
        'interceptor', 'failure', 'serverCache', 'outbound', 'multipart', 'streamPolicy',
        'event', 'publisher', 'consumer', 'job', 'schedule', 'webhook', 'resource',
        'form', 'perform', 'invoke'),
      field('name', $.qualifiedIdentifier), optional($.argumentList), optional($.typeAnnotation),
      optional($.objectBody), optional(seq('also', $.identifier)))),
    domainFunction: $ => seq(optional('pure'), choice('action', 'fn'),
      field('name', $.identifier), $.parameterList, optional(choice($.typeAnnotation, seq('->', $._type))),
      choice($.objectBody, seq('=', $._expr))),
    domainBinding: $ => seq(choice('state', 'derived', 'computed', 'query', 'mutation'), field('name', $.identifier),
      choice(seq(optional($.typeAnnotation), '=', $._expr), $.objectBody)),
    domainBlock: $ => seq(choice('view', 'effect', 'watch', 'batch', 'handle', 'require'), $.objectBody),
    domainCall: $ => seq($.qualifiedIdentifier, $.argumentList),
    routeDeclaration: $ => seq('route', $.stringConstant, '=>', $._expr),
    _objectMember: ($, original) => choice(original, $.domainDeclaration,
      $.domainFunction, $.domainBinding, $.domainBlock, $.routeDeclaration, $.domainIf, $.assignmentStatement),
    useContractDeclaration: $ => seq('use', 'contract', $.identifier, 'from', $.stringConstant,
      optional(seq('audience', $.stringConstant))),
    useExtensionDeclaration: $ => seq('use', 'extension', $.identifier, 'from', $.stringConstant,
      optional(seq('export', $.stringConstant))),
    assignmentStatement: $ => seq(field('target', $.qualifiedAccessExpr), '=', $._expr),
    domainIf: $ => prec.right(seq('if', $._expr, $.objectBody, optional(seq('else', choice($.objectBody, $.domainIf))))),
    objectBodyParameters: $ => seq($._parameter, repeat(seq(',', $._parameter)), choice('->', '=>')),
    objectProperty: $ => seq(repeat($.modifier), $.identifier, choice($.typeAnnotation,
      seq(optional($.typeAnnotation), '=', $._expr), repeat1($.objectBody))),
    argumentList: $ => seq(alias($._open_argument_paren, '('), commaSep(choice($.namedArgument, $._expr)), ')'),
    namedArgument: $ => seq(field('name', $._fieldName), ':', field('value', $._expr)),
    _fieldName: $ => choice($.identifier, alias(choice('class', 'module', 'function',
      'new', 'if', 'else', 'import', 'read', 'for', 'in', 'const', 'fixed', 'local',
      'hidden', 'this', 'super', 'true', 'false', 'null'), $.identifier)),
    _callName: $ => choice($.identifier, alias(choice('require', 'handle', 'query', 'mutation'), $.identifier)),
    unqualifiedAccessExpr: $ => seq($._callName, optional(seq(optional($.methodTypeArguments), $.argumentList))),
    qualifiedAccessExpr: $ => prec.left(22, seq(field('receiver', $._expr), choice('.', '?.'),
      $._fieldName, optional(seq(optional($.methodTypeArguments), $.argumentList)))),
    constrainedType: $ => prec.right(30, seq($._type, alias($._open_argument_paren, '('),
      commaSep(choice($.namedArgument, $._expr)), ')')),
    _expr: ($, original) => choice(original, $.listExpr, $.implicitMemberExpr,
      $.constructorExpr, $.genericExpr, $.objectLiteralExpr, $.pipeLambdaExpr, $.unitLiteralExpr),
    unitLiteralExpr: $ => token(seq(/[0-9][0-9_]*/, optional(seq('.', /[0-9][0-9_]*/)),
      choice('ns', 'us', 'ms', 's', 'm', 'h', 'd', 'b', 'kb', 'mb', 'gb', 'kib', 'mib', 'gib'))),
    listExpr: $ => seq('[', commaSep($._expr), ']'),
    implicitMemberExpr: $ => seq('.', $.identifier),
    constructorExpr: $ => prec(23, seq($.qualifiedIdentifier, optional($.typeArgumentList),
      optional($.argumentList), $.objectBody)),
    genericExpr: $ => prec(23, seq($.qualifiedIdentifier, $.typeArgumentList)),
    objectLiteralExpr: $ => seq('{', commaSep($.objectLiteralEntry), '}'),
    objectLiteralEntry: $ => seq(choice($._fieldName, $.stringConstant), ':', $._expr),
    pipeLambdaExpr: $ => prec(-11, seq('|', commaSep($.typedIdentifier), '|', $._expr)),
    stylesDeclaration: $ => seq('styles', $.styleBody),
    styleBody: $ => seq('{', optional($.styleContent), '}'),
    styleContent: $ => repeat1(choice($.styleText, $.styleString, $.styleBody)),
    styleText: $ => token(/[^{}"']+/),
    styleString: $ => token(choice(/"([^"\\]|\\.)*"/, /'([^'\\]|\\.)*'/)),
  },
});
