test/corpus/syntax.txt
========================================
Configuration classes, import, interpolation and lambda
========================================
module editor.config
import "base.acore" as Base
/// Shared configuration
class Parent { value: Int = 1 }
class Child extends Parent { label: String = "hi \(1 + 2)" }
transform = (value: Int) -> value + 1
settings: Child = Child { value = 2 }

----------------------------------------

(module
  (moduleHeader
    (moduleClause
      (qualifiedIdentifier
        (identifier)
        (identifier))))
  (importClause
    (stringConstant
      (slStringLiteralPart))
    (identifier))
  (clazz
    (docComment)
    (identifier)
    (classBody
      (classProperty
        (identifier)
        (typeAnnotation
          (declaredType
            (qualifiedIdentifier
              (identifier))))
        (intLiteralExpr))))
  (clazz
    (identifier)
    (classExtendsClause
      (qualifiedIdentifier
        (identifier)))
    (classBody
      (classProperty
        (identifier)
        (typeAnnotation
          (declaredType
            (qualifiedIdentifier
              (identifier))))
        (slStringLiteralExpr
          (slStringLiteralPart)
          (stringInterpolation
            (additiveExpr
              (intLiteralExpr)
              (intLiteralExpr)))))))
  (classProperty
    (identifier)
    (functionLiteralExpr
      (parameterList
        (typedIdentifier
          (identifier)
          (typeAnnotation
            (declaredType
              (qualifiedIdentifier
                (identifier))))))
      (additiveExpr
        (unqualifiedAccessExpr
          (identifier))
        (intLiteralExpr))))
  (classProperty
    (identifier)
    (typeAnnotation
      (declaredType
        (qualifiedIdentifier
          (identifier))))
    (constructorExpr
      (qualifiedIdentifier
        (identifier))
      (objectBody
        (objectProperty
          (identifier)
          (intLiteralExpr))))))

========================================
Amends composition
========================================
amends "base.acore"
value: Int = 2

----------------------------------------

(module
  (moduleHeader
    (extendsOrAmendsClause
      (stringConstant
        (slStringLiteralPart))))
  (classProperty
    (identifier)
    (typeAnnotation
      (declaredType
        (qualifiedIdentifier
          (identifier))))
    (intLiteralExpr)))

========================================
Domain extend
========================================
extend Base.Settings { enabled = true }

----------------------------------------

(module
  (extendDeclaration
    (qualifiedIdentifier
      (identifier)
      (identifier))
    (objectBody
      (objectProperty
        (identifier)
        (trueLiteralExpr)))))

========================================
Qualified override and reserved named argument
========================================
profile backend 1
override endpoint Routes.list_tasks { response(type: List<Models.Task>) }

----------------------------------------

(module
  (profileDeclaration
    (identifier)
    (intLiteralExpr))
  (domainDeclaration
    (qualifiedIdentifier
      (identifier)
      (identifier))
    (objectBody
      (objectElement
        (unqualifiedAccessExpr
          (identifier)
          (argumentList
            (namedArgument
              (identifier)
              (genericExpr
                (qualifiedIdentifier
                  (identifier))
                (typeArgumentList
                  (declaredType
                    (qualifiedIdentifier
                      (identifier)
                      (identifier))))))))))))

========================================
Lists, records, units and pipe lambda
========================================
values = [1, 2, 3]
record = { class: "primary", id: 7 }
timeout = 10ms
transform = |value| value + 1

----------------------------------------

(module
  (classProperty
    (identifier)
    (listExpr
      (intLiteralExpr)
      (intLiteralExpr)
      (intLiteralExpr)))
  (classProperty
    (identifier)
    (objectLiteralExpr
      (objectLiteralEntry
        (identifier)
        (slStringLiteralExpr
          (slStringLiteralPart)))
      (objectLiteralEntry
        (identifier)
        (intLiteralExpr))))
  (classProperty
    (identifier)
    (unitLiteralExpr))
  (classProperty
    (identifier)
    (pipeLambdaExpr
      (typedIdentifier
        (identifier))
      (additiveExpr
        (unqualifiedAccessExpr
          (identifier))
        (intLiteralExpr)))))

========================================
Nested styles with quoted braces
========================================
styles { .title { content: "{quoted}"; color: #123456; &:hover { color: blue } } }

----------------------------------------

(module
  (stylesDeclaration
    (styleBody
      (styleContent
        (styleText)
        (styleBody
          (styleContent
            (styleText)
            (styleString)
            (styleText)
            (styleBody
              (styleContent
                (styleText)))
            (styleText)))
        (styleText)))))
